Use URL objects instead of Strings (#344)